--- a/index.html
+++ b/index.html
@@ -1,1 +1,34 @@
-"This is going to a Professional Project" 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Portfolio</title>
+    <link rel="stylesheet" href="css/style.css"> <!-- Link to your CSS file -->
+</head>
+<body>
+
+    <header>
+        <h1>Meshach Adedotun's Portfolio</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About Me</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <!-- Page-specific content goes here -->
+        <h2>Welcome to My Portfolio</h2>
+        <p>I'm a passionate software developer interested in developing secure applications, and data engineering, and more.</p>
+    </main>
+
+    <footer>
+        <p>&copy; 2024 Meshach Adedotun</p>
+    </footer>
+
+</body>
+</html>
+
