--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
             
             <div class="message-form">
                 <label for="message" >Message:</label>
-                <input type="text" id="message" name="message" placeholder="Kindly,leave your message here"/>
+                <input type="text" id="message" name="message" placeholder="Kindly,leave your message here" required/>
             </div>
 
             <div id="message-form">
