--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
         <div class="project">
             <h3>Accountability Management Tool</h3>
             <p>An app that helps users track goals and monitor progress with features like smart scheduling and progress-based rewards.</p>
-            <a href="https://github.com/sirlamode/accountability-tool" target="_blank">View on GitHub</a>
+            <a rel="noopener" href="https://github.com/sirlamode/accountability-tool" target="_blank">View on GitHub</a>
         </div>
         <div class="project">
             <h3>Telemedicine Website</h3>
             <p>A responsive website built with HTML, CSS, and JavaScript to connect doctors and patients remotely.</p>
-            <a href="https://sirlamode.github.io/telemedicine" target="_blank">Live Demo</a>
+            <a rel="noopener" href="https://sirlamode.github.io/telemedicine" target="_blank">Live Demo</a>
         </div>
     </section>
 
@@ -80,8 +80,8 @@
     <footer>
         <p>&copy; 2024 Meshach Adedotun</p>
         <ul class="social">
-            <li><a href="https://github.com/sirlamode" target="_blank">GitHub</a></li>
-            <li><a href="https://linkedin.com/in/sirlamode" target="_blank">LinkedIn</a></li>
+            <li><a rel="noopener" href="https://github.com/SirlamoDE" target="_blank">GitHub</a></li>
+            <li><a rel="noopener" href="https://linkedin.com/in/adedotun-meshach-16656115/" target="_blank">LinkedIn</a></li>
         </ul>
     </footer>
 
