completed the contact-page

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <!-- Professional Introduction -->
     <section class="intro">
-        <img src="images/profile.jpg" alt="Meshach Adedotun" class="profile-photo">
+        <img src="Mesh.jpg" alt="Meshach Adedotun" class="profile-photo">
         <p>Hi! I'm Meshach Adedotun, a passionate developer and entrepreneur specializing in cybersecurity, data engineering, and web development. I help businesses leverage data and secure their infrastructure to thrive in the digital age.</p>
     </section>
 
