--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <header>
         <h1>Meshach Adedotun</h1>
-        <p>Cybersecurity | Data Engineering | Web Development</p>
+        <p> Software Development | Data Engineering | Cybersecurity</p>
     </header>
        
     <!-- Nav bar -->
