completed the contact-page

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <section class="cta">
         <h2>Want to Collaborate?</h2>
         <p>If you're looking for a developer who is passionate about cybersecurity, data engineering, and web development, feel free to reach out!</p>
-        <a href="contact.html" class="btn">Contact Me</a>
+        <a href="aboutMe.html" class="btn">Contact Me</a>
     </section>
 
     <!-- Footer -->
