--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <p>&copy; 2024 Meshach Adedotun</p>
         <ul class="social">
             <li><a rel="noopener" href="https://github.com/SirlamoDE" target="_blank">GitHub</a></li>
-            <li><a rel="noopener" href="https://linkedin.com/in/adedotun-meshach-16656115/" target="_blank">LinkedIn</a></li>
+            <li><a rel="noopener" href="https://www.linkedin.com/in/meshach-adedotun-16656115/" target="_blank">LinkedIn</a></li>
         </ul>
     </footer>
 
