style.css updated

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -20,7 +20,7 @@
         </header>
 
         <section id="profile-picture">
-            <img id="pic"  src="profile_image_transparent_refined.png" alt="Profile picture of Meshach Adedotun">
+            <img id="pic"  src="Mesh.jpg" alt="Profile picture of Meshach Adedotun">
         </section>
 
         <section id="about">
