--- a/aboutMe.html
+++ b/aboutMe.html
@@ -19,17 +19,29 @@
             </nav>
         </header>
 
-        <section id="profile-picture">
-            <img id="pic"  src="Mesh.jpg" alt="Profile picture of Meshach Adedotun">
-        </section>
+        
+        <div class="about-me-container">
+            <!-- Profile Picture -->
+            <img src="Mesh.jpg" alt="Profile picture of Meshach Adedotun" class="profile-picture">
 
-        <section id="about">
-            <h2>About Me</h2>
-            <p>Hello! I'm Meshach O. Adedotun, a passionate software engineer, data engineer, and cybersecurity enthusiast with a background in chemical engineering. I have over 8 years of experience as an entrepreneur and business consultant, and I've recently transitioned into the tech world to harness my expertise in building robust solutions for businesses.</p>
-            <p>With my strong proficiency in Python, SQL, and JavaScript, I specialize in building reliable and secure systems. My interests span data engineering, cybersecurity, and web development, with a particular focus on delivering clean, trusted data that drives key business decisions. I enjoy creating efficient software solutions that help people and businesses thrive.</p>
-            <p>Currently, I'm developing a telemedicine platform, while also building my portfolio of innovative projects. I'm dedicated to lifelong learning, and I'm always exploring new technologies to improve my craft.</p>
-        </section>
+            <!-- About Me Text Section -->
+            <div class="about-me-text">
+                <h2>About Me</h2>
+                <p>Hello! I'm Meshach O. Adedotun, a passionate software developer with a background in Chemical engineering.I am comfortable in Node.js, Express.js, MySQL, PostgreSQL, and web development.</p>
+                <p>My love for cybersecurity and data engineering drives me to integrate these concepts into creating innovative and secure solutions,with a particular focus on delivering clean, trusted data that drives key business decisions.</p>
+                <p>I enjoy the challenges of learning new technologies, which continuously enhance my projects.</p>
 
+                <p>
+                    With a strong background in business development and a knack for driving growth through data-driven decisions, 
+                    I'm eager to continue growing my skills and making an impact in tech.
+                </p>
+
+                <p>Currently, I'm developing a telemedicine platform, while also building my portfolio of innovative projects. I'm dedicated to lifelong learning,
+                   and I'm always exploring new technologies to improve my craft.
+                </p>
+            </div>
+        </div>
+        
         <section id="skills">
             <h2>Skills</h2>
             <ul>
