--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Meshach Adedotun - Cybersecurity, Data Engineering, Web Development">
     <title>Meshach Adedotun - Portfolio</title>
-    <link rel="stylesheet" href="css/style.css"> <!-- Link to your CSS file -->
+    <link rel="stylesheet" href="css/style.css"> <!-- Link to CSS file -->
 </head>
 
 
