--- a/aboutMe.html
+++ b/aboutMe.html
@@ -108,7 +108,7 @@
         </section>
 
         <footer>
-            <p>© 2024 Meshach Adedotun | <a rel="noopener" href="https://github.com/SirlamoDE" target="_blank">GitHub</a> | <a 
+            <p>© 2024 Meshach Adedotun | <a id="git" rel="noopener" href="https://github.com/SirlamoDE" target="_blank">GitHub</a> | <a id="linkedin"
                rel="noopener" href="https://linkedin.com/in/adedotun-meshach-16656115/" target="_blank">LinkedIn</a></p>
         </footer>
 
