--- a/aboutMe.html
+++ b/aboutMe.html
@@ -107,10 +107,19 @@
 
         </section>
 
+        <!-- Footer -->
         <footer>
-            <p>© 2024 Meshach Adedotun | <a id="git" rel="noopener" href="https://github.com/SirlamoDE" target="_blank">GitHub</a> | <a id="linkedin"
-               rel="noopener" href="https://linkedin.com/in/adedotun-meshach-16656115/" target="_blank">LinkedIn</a></p>
+            <p>&copy; 2024 Meshach Adedotun</p>
+            <ul class="social">
+                <li><a rel="noopener" href="https://github.com/SirlamoDE" target="_blank">GitHub</a></li>
+                <li><a rel="noopener" href="https://www.linkedin.com/in/meshach-adedotun-16656115/" target="_blank">LinkedIn</a></li>
+            </ul>
         </footer>
+
+        <!-- <footer>
+            <p>© 2024 Meshach Adedotun | <a id="git" rel="noopener" href="https://github.com/SirlamoDE" target="_blank">GitHub</a> | 
+                <a id="linkedin" rel="noopener" href="https://linkedin.com/in/adedotun-meshach-16656115/" target="_blank">LinkedIn</a></p>
+        </footer> -->
 
 
         <!-- visitor's message goes in here -->
