--- a/aboutMe.html
+++ b/aboutMe.html
@@ -11,7 +11,7 @@
         <header>
             <nav>
                 <ul>
-                    <li><a href="#about">About Me</a></li>
+                    <li><a href="#Home">Home</a></li>
                     <li><a href="#skills">Skills</a></li>
                     <li><a href="#portfolio">Portfolio</a></li>
                     <li><a href="#education">Education</a></li>
