style.css updated

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -11,7 +11,7 @@
         <header>
             <nav>
                 <ul>
-                    <li><a href="#Home">Home</a></li>
+                    <li><a href="#about">About Me</a></li>
                     <li><a href="#skills">Skills</a></li>
                     <li><a href="#portfolio">Portfolio</a></li>
                     <li><a href="#education">Education</a></li>
@@ -108,18 +108,18 @@
         </section>
 
         <!-- Footer -->
-        <footer>
+        <!-- <footer>
             <p>&copy; 2024 Meshach Adedotun</p>
             <ul class="social">
                 <li><a rel="noopener" href="https://github.com/SirlamoDE" target="_blank">GitHub</a></li>
                 <li><a rel="noopener" href="https://www.linkedin.com/in/meshach-adedotun-16656115/" target="_blank">LinkedIn</a></li>
             </ul>
-        </footer>
-
-        <!-- <footer>
-            <p>© 2024 Meshach Adedotun | <a id="git" rel="noopener" href="https://github.com/SirlamoDE" target="_blank">GitHub</a> | 
-                <a id="linkedin" rel="noopener" href="https://linkedin.com/in/adedotun-meshach-16656115/" target="_blank">LinkedIn</a></p>
         </footer> -->
+
+        <footer>
+            <p>© 2024 Meshach Adedotun | <a  rel="noopener" href="https://github.com/SirlamoDE" target="_blank">GitHub</a> | <a  rel="noopener" href="https://linkedin.com/in/adedotun-meshach-16656115/" target="_blank">LinkedIn</a>
+            </p>
+        </footer>
 
 
         <!-- visitor's message goes in here -->
