--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <header>
         <h1>Meshach Adedotun</h1>
         <p> Software Development | Data Engineering | Cybersecurity</p>
+        <p> contact 08145652228</p>
     </header>
        
     <!-- Nav bar -->
